# olayer

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
bindings/c_ffi/: Cargo.toml  build.rs  (+2 more)
core/: Cargo.toml
core/benches/: geodesy_benchmark.rs  interpolator_benchmark.rs  projections_benchmark.rs  symbol_benchmark.rs  terrain_benchmark.rs
core/src/: lib.rs
core/src/camera/: errors.rs  mod.rs  tests.rs
core/src/geodesy/: conversions.rs  coords.rs  ellipsoid.rs  errors.rs  math.rs  mod.rs  tests.rs
core/src/geodesy/solvers/: haversine.rs  mod.rs  vincenty.rs
core/src/interpolator/: engine.rs  errors.rs  mod.rs  state.rs  tests.rs
core/src/projections/: errors.rs  lcc.rs  matrix.rs  mercator.rs  mod.rs  stereographic.rs  tests.rs
core/src/sld/: errors.rs  mod.rs  parser.rs  styles.rs  tests.rs
core/src/symbol_registry/: errors.rs  mod.rs  primitives.rs  registry.rs  tests.rs
core/src/symbol_registry/providers/: declarative.rs  icao.rs  mod.rs  nato.rs
core/src/terrain/: engine.rs  errors.rs  mod.rs  tests.rs  tile.rs
docs/: api_reference.md  arch.md  developer_guide.md  plan.md  spec.md
sdk/native/: Cargo.toml  build.rs  libolayer_native.h
sdk/native/benches/: grid_generation.rs
sdk/native/demo/: Cargo.toml
sdk/native/demo/src/: main.rs  sim.rs  tiles.rs  ui.rs
sdk/native/src/: lib.rs
sdk/native/src/c_ffi_bridge/: mod.rs
sdk/native/src/native_controller/: mod.rs
sdk/native/src/native_layer_manager/: mod.rs
sdk/native/src/native_map_data_stack/: mod.rs
sdk/native/src/wgpu_cpu_vertex_pipeline/: mod.rs
sdk/native/src/wgpu_gpu_pipeline/: mod.rs
(+68 files in other folders)
