[package]
name = "olayer-core"
version = "0.1.0"
edition = "2021"

[dependencies]
lru = "0.12"
quick-xml = "0.31.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "geodesy_benchmark"
harness = false

[[bench]]
name = "projections_benchmark"
harness = false

[[bench]]
name = "interpolator_benchmark"
harness = false

[[bench]]
name = "terrain_benchmark"
harness = false

[[bench]]
name = "symbol_benchmark"
harness = false
