[package]
name = "olayer-desktop-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
olayer-core = { path = "../../../core" }
olayer-native = { path = ".." }
winit = { version = "0.29", features = ["rwh_06"] }
wgpu = "0.19"
bytemuck = { version = "1.16", features = ["derive"] }
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
resvg = "0.38"
usvg = "0.38"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
pollster = "0.3"
